convert java 23 unsafe memory access deprecation to executable example